<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBirdActivity">

    <TextView
        android:theme="@style/HintTextViewTheme"
        android:id="@+id/addBirdNameText"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/close_spacing"
        android:text="@string/add_bird_name_text"

        app:layout_constraintBottom_toBottomOf="@+id/addBirdNameEdit"
        app:layout_constraintEnd_toStartOf="@+id/addBirdNameEdit"
        app:layout_constraintTop_toTopOf="@+id/addBirdNameEdit" />

    <EditText
        android:id="@+id/addBirdNameEdit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_spacing"
        android:layout_marginEnd="@dimen/horizontal_spacing"
        android:ems="10"
        android:inputType="text"
        android:theme="@style/EditTextViewTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addBirdDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/close_spacing"
        android:text="@string/add_bird_description_text"
        android:theme="@style/HintTextViewTheme"
        app:layout_constraintBottom_toBottomOf="@+id/addBirdDescriptionEdit"
        app:layout_constraintEnd_toStartOf="@+id/addBirdDescriptionEdit"
        app:layout_constraintTop_toTopOf="@+id/addBirdDescriptionEdit" />

    <EditText
        android:id="@+id/addBirdDescriptionEdit"
        android:layout_width="@dimen/editTextWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_spacing"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:minLines="1"
        android:singleLine="false"
        android:theme="@style/EditTextViewTheme"
        app:layout_constraintEnd_toEndOf="@+id/addBirdImageEdit"
        app:layout_constraintStart_toStartOf="@+id/addBirdImageEdit"
        app:layout_constraintTop_toBottomOf="@+id/addBirdImageEdit" />

    <TextView
        android:id="@+id/addBirdPlaceText"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/close_spacing"
        android:text="@string/add_bird_place_text"
        android:theme="@style/HintTextViewTheme"
        app:layout_constraintBottom_toBottomOf="@+id/addBirdPlaceEdit"
        app:layout_constraintEnd_toStartOf="@+id/addBirdPlaceEdit"
        app:layout_constraintTop_toTopOf="@+id/addBirdPlaceEdit" />

    <EditText
        android:id="@+id/addBirdPlaceEdit"
        android:layout_width="@dimen/editTextWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_spacing"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:singleLine="true"
        android:theme="@style/EditTextViewTheme"
        app:layout_constraintEnd_toEndOf="@+id/addBirdTimeEdit"
        app:layout_constraintStart_toStartOf="@+id/addBirdTimeEdit"
        app:layout_constraintTop_toBottomOf="@+id/addBirdTimeEdit" />

    <TextView
        android:id="@+id/addBirdCategoryText"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/close_spacing"
        android:text="@string/add_bird_category_text"
        android:theme="@style/HintTextViewTheme"
        app:layout_constraintBottom_toBottomOf="@+id/addBirdCategoryEdit"
        app:layout_constraintEnd_toStartOf="@+id/addBirdCategoryEdit"
        app:layout_constraintTop_toTopOf="@+id/addBirdCategoryEdit" />

    <EditText
        android:id="@+id/addBirdCategoryEdit"
        android:layout_width="@dimen/editTextWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_spacing"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:singleLine="true"
        android:theme="@style/EditTextViewTheme"
        app:layout_constraintEnd_toEndOf="@+id/addBirdPlaceEdit"
        app:layout_constraintStart_toStartOf="@+id/addBirdPlaceEdit"
        app:layout_constraintTop_toBottomOf="@+id/addBirdPlaceEdit" />

    <TextView
        android:id="@+id/addBirdTimeText"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/close_spacing"
        android:text="@string/add_bird_time_text"
        android:theme="@style/HintTextViewTheme"
        app:layout_constraintBottom_toBottomOf="@+id/addBirdTimeEdit"
        app:layout_constraintEnd_toStartOf="@+id/addBirdTimeEdit"
        app:layout_constraintTop_toTopOf="@+id/addBirdTimeEdit" />

    <EditText
        android:id="@+id/addBirdTimeEdit"
        android:layout_width="@dimen/editTextWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_spacing"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:gravity="start|top"
        android:inputType="none"
        android:onClick="pickTime"
        android:singleLine="true"
        android:theme="@style/EditTextViewTheme"
        app:layout_constraintEnd_toEndOf="@+id/addBirdDescriptionEdit"
        app:layout_constraintStart_toStartOf="@+id/addBirdDescriptionEdit"
        app:layout_constraintTop_toBottomOf="@+id/addBirdDescriptionEdit" />

    <TextView
        android:id="@+id/addBirdImageText"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/close_spacing"
        android:text="@string/add_bird_image_text"
        android:theme="@style/HintTextViewTheme"
        app:layout_constraintBottom_toBottomOf="@+id/addBirdImageEdit"
        app:layout_constraintEnd_toStartOf="@+id/addBirdImageEdit"
        app:layout_constraintTop_toTopOf="@+id/addBirdImageEdit" />

    <EditText
        android:id="@+id/addBirdImageEdit"
        android:layout_width="@dimen/editTextWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_spacing"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:gravity="start|top"
        android:inputType="none"
        android:onClick="pickImage"
        android:singleLine="true"
        android:theme="@style/EditTextViewTheme"
        app:layout_constraintEnd_toEndOf="@+id/addBirdNameEdit"
        app:layout_constraintStart_toStartOf="@+id/addBirdNameEdit"
        app:layout_constraintTop_toBottomOf="@+id/addBirdNameEdit" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>